1998-11-27  Martin Baulig  <martin@home-of-linux.org>

	* gnome-properties.[ch]: Scratched it. Please do not remove this
	two files from CVS and the Makefile.am at the moment since I want
	to add some functions here.

1998-11-27  Martin Baulig  <martin@home-of-linux.org>

	* gnome-dialog.c (gnome_dialog_init): Don't create separator and
 	action area here so it won't be shown if the dialog contains no
	buttons at all.
 	(gnome_dialog_init_action_area): New static function to create
 	separator and action area.
	(gnome_dialog_append_button*): Call gnome_dialog_init_action_area.

	* gnome-dialog.c (gnome_dialog_append_button_with_pixmap):
	New function to add arbitrary button with a pixmap, if the
	pixmap is NULL this is equivalent to gnome_dialog_append_button.
	(gnome_dialog_append_buttons_with_pixmaps): New function to
	add multiple buttons with pixmaps. This is basically what
	gnome_dialog_append_buttonsv does for ordinary buttons.
	
1998-11-27  bertrand  <Bertrand.Guiheneuf@inria.fr>

	* gnome-canvas-line.c (gnome_canvas_line_draw): use the new parameter
	in item_to_canvas to know the actual number of points drawn.

1998-11-27  bertrand  <Bertrand.Guiheneuf@inria.fr>

	* gnome-canvas-line.c (item_to_canvas): Don't draw twice the same point
	speeds up a lot when line contains a lot of points and the zoom factor
	is very small.

Fri Nov 27 00:34:44 1998  George Lebl  <jirka@5z.com>

	* gnome-pixmap.c: check the visuals and if imlib and gdk visuals
	  are the same, morph ourselves into a GTK_NO_WINDOW widget and
	  work more like gtkpixmap

	* gnome-stock.c: combine_mask only needs to be called if gnomepixmap
	  is a window widget otherwise it spits out a warning

1998-11-27  Jeff Garzik  <jgarzik@pobox.com>

	* gnome-dialog-util: (gnome_question_dialog*, gnome_ok_cancel*):
	NULL callbacks now supported.

	* gnome-geometry.c:
	Added API docs.

	* gnome-calculator.c, gnome-client.c, gnome-dateedit.c,
	gnome-entry.c, gnome-font-picker.c, gnome-font-selector.c,